RESOLVED FIXED296776
REGRESSION( 275091@main): Darker output with SVG feComponentTransfer
https://bugs.webkit.org/show_bug.cgi?id=296776
Summary REGRESSION( 275091@main): Darker output with SVG feComponentTransfer
Taher
Reported 2025-07-31 16:33:11 PDT
doesn't respect first filter primitive's color space.
Attachments
reduced test case (704 bytes, text/html)
2025-08-05 11:40 PDT, Said Abou-Hallawa
no flags
Taher
Comment 1 2025-07-31 16:33:31 PDT
Taher
Comment 2 2025-07-31 16:36:21 PDT
Said Abou-Hallawa
Comment 3 2025-08-01 09:50:56 PDT
The title says this is a regression. Is this really a regression? What is the blamed change?
Said Abou-Hallawa
Comment 4 2025-08-05 11:40:57 PDT
Created attachment 476291 [details] reduced test case Repro steps: Open the attached reduced test. Result: The black <div> should be displayed as a black box. Expected: The black <div> should be displayed as light gray box after applying the SVG feComponentTransfer filter.
Said Abou-Hallawa
Comment 5 2025-08-05 11:49:12 PDT
In the repro steps above I meant: << Result: The black <div> should be displayed as a black box. >> Result: The black <div> is displayed as a black box.
EWS
Comment 6 2025-08-07 07:13:30 PDT
Committed 298332@main (1c0dff3c8c02): <https://commits.webkit.org/298332@main> Reviewed commits have been landed. Closing PR #48803 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.