REGRESSION(275091@main): Darker output with SVG feComponentTransfer https://bugs.webkit.org/show_bug.cgi?id=296776 rdar://156406312

Reviewed by Brent Fulgham and Said Abou-Hallawa.

The regressing commit (275091@main) aimed to fix darker SVG filter
outputs in Cairo by creating SourceGraphic and SourceAlpha to the
operating color space, but omitted the USE(CAIRO) directive,
applying it universally and breaking filter effects in non-Cairo
software appliers.

* LayoutTests/svg/filters/feComponentTransfer-gamma-expected.html: Added.
* LayoutTests/svg/filters/feComponentTransfer-gamma.html: Added.
* Source/WebCore/svg/graphics/filters/SVGFilter.cpp:
(WebCore::buildFilterEffectGraph):

Canonical link: https://commits.webkit.org/298332@main